MDEV-29421 Thread (10.6+) and server hangs (10.4/10.5) in 'Opening tables' (on optimized builds) and SIGABRT in safe_mutex_lock (on debug) on I_S read when using Spider

In spider_free_share(), Spider acquires the mutex, spider_open_tables,
and then makes statistics of the target table persistent.

When table_open_cache is small, the statistics persistence can lead to
another call of spider_free_share() and this results in the double
lock on the mutex.

The mutex spider_tbl_mutex is acquired unnecessarily long. Shortening
the locking period resolves the problem.